data/derived/fa15/progs/unify/prog3797.ml.out
Characters 299-311:
  else ((carry+1),[(h+b+c)/10]::[(h+b+c) mod 10]::t) in
                  ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
